ligolang/src/test/contracts/negative/deep_pattern_matching/pm_fail9.mligo
type myd = One of int | Two

let t = fun (x : myd) ->
  match x with
  | One a -> 2
  | Two -> a
